[package]
name = "hello-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
pretty_env_logger = "0.4.0"
tracing = { version = "0.1.37", features = ["log-always"] }
winit = "0.28.6"
raw-window-handle = "0.5.2"
